WithBurger visibility fix

--- a/src/modules/widgets/Header/Components/WithBurger/WithBurger.module.scss
+++ b/src/modules/widgets/Header/Components/WithBurger/WithBurger.module.scss
@@ -97,6 +97,7 @@
     &_hidden {
         opacity: 0;
         visibility: hidden;
+        pointer-events: none;
     }
 }
 
